# poc-ai-analyzer

./: .envrc.example  .gitignore  README.md  main.py  pyproject.toml  temp.py
agents/: common.py  graphql.py  root.py
app/: agents.py  constants.py  cube.py  logging.py  message.py
app/agents/: common.py  graphql.py  logging.py  router.py  vegalite.py
app/models/: message.py  vegalite.py
cube/model/cubes/: events.yml
scripts/: build.sh  build_schema.py  codegen.sh  dev.sh  test.sh
tests/: test_cube.py  test_validation.py
