[project]
name = "poc-ai-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphql-core>=3.2.7",
    "pydantic-ai>=1.39.0",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.50.0",
]
